--- a/index.html
+++ b/index.html
@@ -33,7 +33,7 @@
             <h2>Ganesh Prasad Lath</h2>
         </div>
         <nav>
-            <div class="nav-links">
+            <!-- <div class="nav-links">
                 <!-- <i class="fa fa-times"></i> -->
                 <ul>
                     <li class="active"><a href="/">Home</a></li>
@@ -43,7 +43,7 @@
                     <li><a href="#">Blogs</a></li>
                     <li><a href="#">Browse More</a></li>
                 </ul>
-            </div>
+            </div> -->
             <!-- <i class="fa fa-bars"></i> -->
         </nav>
 
