Hero I think Done

--- a/index.html
+++ b/index.html
@@ -295,7 +295,7 @@
 </section>
 
 <!--Social Profiles-->
-<section class="section-container">
+<section class="section-container social-profile">
     <div class="divider"></div>
     <div class="header-text-social">
         <h2>My Social Profiles</h2>
@@ -327,7 +327,7 @@
 
 <!--Get in touch-->
 
-<section class="section-container">
+<section class="section-container get-in-touch">
     <div class="divider"></div>
     <div class="contact-container">
         <div class="contact-content">
